Allow single-image attachments to be displayed larger, fix overflow by fitting the size of the container.

--- a/backend/critterchat/http/static/chat.css
+++ b/backend/critterchat/http/static/chat.css
@@ -652,8 +652,14 @@ div.conversation div.attachments {
     flex-wrap: wrap;
 }
 
+div.conversation div.attachments img.solo {
+    max-height: 300px;
+}
+
 div.conversation div.attachments img {
     display: block;
+    max-height: 100px;
+    max-width: 100%;
 }
 
 div.message.highlighted {
